# SunSaltyBoard

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
openspec/specs/clipboard-monitor/: spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  error.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sync/: mod.rs
src/components/clipboard/: ClipboardList.tsx  ContextMenu.tsx
src/components/search/: SearchBar.tsx
src/components/settings/: HotkeyRecorder.tsx  SettingsPanel.tsx
src/services/: api.ts
src/store/: clipboard.ts  groups.ts  index.ts  settings.ts
src/types/: index.ts
src/utils/: index.ts
