[package]
name = "SunSaltyBoard"
version = "0.1.0"
description = "SunSaltyBoard - Windows Clipboard Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "sun_salty_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
uuid = { version = "1", features = ["v4"] }

# Clipboard
arboard = "3"

base64 = "0.22"
dirs = "5"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Lazy statics
once_cell = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Linux/macOS dependencies (keyboard/mouse simulation)
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
enigo = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSRunningApplication", "NSWorkspace", "libc"] }
objc2-core-foundation = { version = "0.3", features = ["CFArray", "CFDictionary", "CFNumber", "CFString"] }
objc2-core-graphics = { version = "0.3", features = ["CGGeometry", "CGWindow"] }

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
